# Thought-Fork

./: .env.example  .gitignore  CHANGELOG.md  CONCEPT.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml  requirements.txt  thought-fork-build-plan.md
api/: __init__.py  database.py  main.py  models.py  streaming.py
api/routes/: __init__.py  fork.py
examples/: basic_fork.py  code_review.py  decision_making.py  research.py
tests/: test_fork.py  test_manager.py  test_synthesis.py
thought-fork-ui/: index.html  package-lock.json  package.json
thought-fork-ui/src/: App.jsx  index.css  main.jsx
thought-fork-ui/src/components/: ChatFeed.jsx  ForkGrid.jsx  ForkPanel.jsx  MarkdownBlock.jsx  PromptInput.jsx  Sidebar.jsx  StancePreview.jsx  SynthesisPanel.jsx
thought-fork-ui/src/hooks/: useChatSession.js  useForkStream.js
thought_fork/: __init__.py  cli.py  config.py  fork.py  manager.py  message.py  result.py  stance_selector.py  synthesis.py
