[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thought-fork"
version = "0.6.0"
description = "Branch AI reasoning into parallel thought paths"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Ameen Saeed" },
]
keywords = ["ai", "reasoning", "parallel", "fork", "synthesis", "llm", "thought-fork"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.86.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.3.0",
    "aiosqlite>=0.21.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[project.scripts]
thought-fork = "thought_fork.cli:main"

[project.urls]
Homepage = "https://github.com/A-radman9/Thought-Fork"
Documentation = "https://github.com/A-radman9/Thought-Fork#readme"
Repository = "https://github.com/A-radman9/Thought-Fork"
Issues = "https://github.com/A-radman9/Thought-Fork/issues"

[tool.setuptools.packages.find]
include = ["thought_fork*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
